--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,5 +1,16 @@
+:root {
+  --bg-color: rgba(45, 45, 45, 1);
+  --bg-color-2:  rgba(75, 142, 196, 0.7);
+  --bg-color-3: rgba(30, 30, 30, 1);
+  --main-text-color: rgba(252, 252, 252, 0.692);
+  --secondary-text-color: rgb(74, 173, 212);
+  --gradient-bg: linear-gradient( var(--bg-color) 0%, var(--bg-color-3) 100%);
+  --gradient-bg-reverse: linear-gradient( var(--bg-color-3) 0%, var(--bg-color) 100%);
+}
+
 .footer {
-  background: #b71775;
+  background: var(--gradient-bg-reverse);
+  height: 5vh;
   display: flex;
   justify-content: center;
 }
