--- a/src/styles/Contact.css
+++ b/src/styles/Contact.css
@@ -2,6 +2,7 @@
   background-color: rgba(30, 30, 30, 1) !important;
   height: 85vh;
   color: rgba(252, 252, 252, 0.692);
+  padding-left: 10px;
 }
 
 .contact {
